--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2>About Me</h2>
                 <div class="info-item">
                     <span class="label">Name:</span>
-                    <span class="value">Your Name Here</span>
+                    <span class="value">Deep Saikia</span>
                 </div>
                 <div class="info-item">
                     <span class="label">Email:</span>
